<resources>
    <string name="app_name">Poke App</string>
    <!-- Login   -->
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_user_title">Correo</string>
    <string name="login_username_hint">Ingrese su correo electronico</string>
    <string name="login_password_title">Contraseña</string>
    <string name="login_password_hint">Ingrese su contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_no_account">¿No tienes cuenta? Registrate</string>
    <!-- Registro   -->
    <string name="register_title">Registro</string>
    <string name="register_user_title">Usuario</string>
    <string name="register_username_hint">Ingrese su usuario</string>
    <string name="register_email_title">Correo Electrónico</string>
    <string name="register_email_hint">Ingrese su correo electrónico</string>
    <string name="register_password_title">Contraseña</string>
    <string name="register_password_hint">Ingrese su contraseña</string>
    <string name="register_confirm_password_title">Confirmar Contraseña</string>
    <string name="register_confirm_password_hint">Ingrese de nuevo su contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="register_already_account">¿Ya tienes cuenta? Inicia Sesión</string>
    <!--Home-->
    <string name="home_title">Inicio</string>
    <string name="home_logout_button">Cerrar Sesión</string>
    <string name="home_construction_text">En Construcción</string>
    <string name="home_infoUser">Cargando Datos... </string>

    <!-- Error Messages -->
    <string name="error_empty_fields">Por favor, complete todos los campos.</string>
    <string name="error_invalid_email">Correo electrónico inválido.</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden.</string>
    <string name="error_invalid_credentials">Credenciales inválidas.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>